# helix

./: .gitignore  MANIFEST.in  README.rst  alembic.ini  helix.wsgi  requirements.txt  setup.cfg  setup.py  tox.ini
alembic/: env.py
alembic/versions/: 05ba899219b1_add_instruments_table.py  14da048bdb82_init_revision.py  aed82e046b4f_add_brokers_table.py  dc0df64d2bd3_add_ticks_table.py
etc/: helix.conf  logging.yaml  services.ds
etc/apache2/: 01_helix_api.conf
etc/systemd/: helix.uwsgi.service
etc/uwsgi/: helix.ini
gentoo/: Manifest  helix-0.1.0.ebuild
helix/: accounts.py  bars.py  contexts.py  engines.py  instruments.py  security.py  version.py
helix/api/: app.py  controllers.py  middlewares.py  routes.py
helix/cmd/: api.py  gui.py  platform.py
helix/common/: config.py  db.py  encoding.py  exceptions.py  log.py  threads.py
helix/core/: history.py  models.py
helix/dm/: events.py  instruments.py  models.py
helix/dm/backtest/: instruments.py
helix/events/: base.py  bus.py
helix/gui/: app.py  gtk.py  tools.py  windows.glade  windows.py
helix/gui/charts/: contexts.py  controllers.py  datetime_utils.py  factory.py  gobjects.py  tools.py  widgets.py
helix/market/: events.py  order_books.py  orders.py  positions.py
helix/rpc/: client.py  discovery.py
helix/strategies/: base.py  helix_v1.py  test.py
helix/streams/: csvs.py
helix/tests/market/: test_order_book.py
metatrader/helix/: helix.mq4
metatrader/helix/Experts/: helix.mq4
metatrader/helix/libs/: enginelib.mq4  marketlib.mq4  storagelib.mq4
(+4 files in other folders)
