[metadata]
name = helix
summary =  Trading Platform
description-file =
    README.rst
author = Eugene Frolov
author-email = eugene@frolov.net.ru
home-page = http://helix.synapse.net.ru/
classifier =
    Environment :: helix
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    helix

[entry_points]
console_scripts =
    helix-gui = helix.cmd.gui:main
    helix-api = helix.cmd.api:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
